# k8s-study

./: .gitignore  deployment.yaml  k8s-web-to-nginx.yaml  nginx.yaml  service.yaml
k8s-web-hello/: Dockerfile  main.py  pyproject.toml  requirements.txt
k8s-web-to-nginx/: main.py  pyproject.toml  requirements.txt
