[tool.poetry]
name = "k8s-web-hello"
version = "0.1.0"
description = ""
authors = ["GoGiants1 <chooi221@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
